// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Price /> <Price /> comoponent should render children correctly 1`] = `
<span
  className="talixo-price"
>
   
  1,000.00
   
  <abbr
    title="PLN"
  >
    PLN
  </abbr>
</span>
`;

exports[`<Price /> <Price /> comoponent should render errorPlaceholder when wrong value is provided 1`] = `
<span
  className="talixo-price"
>
  -
</span>
`;

exports[`<Price /> <Price /> comoponent should render prefix correctly 1`] = `
<span
  className="talixo-price"
>
  <small>
    about
  </small>
   
  1,000.00
   
  <abbr
    title="PLN"
  >
    PLN
  </abbr>
</span>
`;

exports[`<Price /> <Price /> comoponent should render price with curency before price 1`] = `
<span
  className="talixo-price"
>
  <abbr
    title="GBP"
  >
    GBP
  </abbr>
   
  1,000.00
   
</span>
`;
